--- a/app/views/admin_agentsapproval.scala.html
+++ b/app/views/admin_agentsapproval.scala.html
@@ -28,29 +28,86 @@
                             <h2 class="text-success" style="margin-left:5%;">Approve or  Reject application</h2>
 
 
-                            <div class="col-sm-offset-2" id="tablediv">
-                         <table class="table   table-bordered ">
+                            <div class="col-sm-offset-1" id="tablediv">
+                         <table class="table   table-bordered table-hover table-striped ">
 
 
-                        <thead><th>id</th>  <th>Fisrtname</th>  <th>lastname</th></thead>
+                        <thead>
+                            <tr class="bg-inverse text-white">
+                            <th>id</th>
+                            <th>Fisrtname</th>
+                            <th>lastname</th>
+                            <th>Station</th>
+                            <th>Telephone</th>
+                            <th>Address</th>
+                            <th>View</th>
+                            <th>Reject</th>
+                            <th>Accept</th>
+                            </tr>
+                           </thead>
 
-                               @for(applicant <- AgentApplication.applicant() ) {
+                              @for(applicant <- AgentApplication.applicant() ) {
                                    <tr>
-                                       <td>
+                                       <td class="id">
                                            @applicant.id
                                        </td>
-                                       <td>
-                                       </td>
-                                       <td>
+
+                                       <td class="firstname">
                                            @applicant.firstname
                                        </td>
-                                       <td>
+                                       <td class="lastname">
                                            @applicant.lastname
 
                                        </td>
-                                         <td>
-                                           @applicant.company
 
+                                       <td class="sitename">
+                                           @applicant.sitename
+                                       </td>
+
+                                       <td class="phonenumber">
+                                           @applicant.phonenumber
+
+                                       </td>
+                                       <td class="address">
+                                           @applicant.address
+
+                                       </td>
+
+                                       <td class="district" hidden>
+                                           @applicant.district.district
+                                       </td>
+                                       <td class="sector" hidden>
+                                           @applicant.sector.sector
+                                       </td>
+                                       <td class="cell" hidden>
+                                           @applicant.cell.cell
+                                       </td>
+                                       <td class="nationality" hidden>
+                                           @applicant.nationality
+                                       </td>
+                                          <td class="nid" hidden>
+                                               @applicant.nid
+                                           </td>
+                                          <td class="company" hidden>
+                                               @applicant.company
+                                           </td>
+                                         <td class="passportphoto" hidden>
+                                               @applicant.passportphoto
+                                           </td>
+                                       <td class="agromeration" hidden>
+                                               @applicant.agromeration
+                                           </td>
+
+                                    <td>
+                                        <button type="button" class="btn btn-primary btn-sm detail" data-toggle="modal" data-target="#detail">Detail</button>
+
+                                    </td>
+
+                                       <td>
+                                           <input type="submit" value="Reject" class="btn btn-sm btn-danger">
+                                       </td>
+                                       <td>
+                                           <input type="submit" value="Access" class="btn btn-sm btn-success">
                                        </td>
 
                                     </tr>
@@ -58,6 +115,8 @@
 
 
                          </table>
+
+
                                 </div>
                             </div>
 
@@ -74,6 +133,185 @@
     <a class="scroll-to-top rounded" href="#">
         <i class="fa fa-chevron-up"></i>
     </a>
+
+
+
+    @*User Details Model*@
+    @*    ============================-->*@
+
+   <section id="">
+        <div class="container">
+           <div class="row">
+               <div class="modal fade" id="detail" tabindex="-1" role="dialog" aria-labelledby="Details" aria-hidden="true">
+                   <div class="modal-dialog modal-lg">
+                       <div class="modal-content">
+                               <div class="modal-header">
+                                   <h5 class="modal-title center" id="">Applicant detail</h5>
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                   </button>
+                                </div>
+                                <div class="modal-body ">
+
+
+
+                                   <form class=" mt-5"  id="applicationForm" enctype="multipart/form-data"  >
+
+                                       @*    <div class="row">
+                                               <div class=" col-md-6 mt-5">
+                                                   <div class="form-group   ">
+                                                       <div class="col-md-3">
+                                                           <img src="" alt="passpost" id="passportphoto" width="140" height="140">
+                                                       </div>
+                                                   </div>
+                                               </div>
+                                           </div>*@
+
+                                           <div class="row">
+                                               <div class=" col-md-6">
+                                                   <div class="form-group   ">
+                                                       <input  name="district" value="" disabled class="form-control" id="district"  type="disabled">
+                                                   </div>
+                                               </div>
+
+                                               <div class="col-md-6">
+                                                   <div class="form-group   ">
+                                                       <input  name="sector" disabled class="form-control" id="sector"  type="disabled">
+                                                   </div>
+                                               </div>
+                                           </div>
+
+                                           <div class="row">
+                                               <div class="form-group col-md-6  ">
+                                                   <input  name="cell" disabled class="form-control" id="cell" type="disabled">
+                                               </div>
+
+                                               <div class="form-group col-md-6">
+                                                   <input
+                                                   name="agglomeration"
+                                                   id="agromeration"
+                                                   class="form-control"
+                                                   type="text"
+                                                   disabled
+
+                                                    placeholder="Enter agglomeration name">
+                                               </div>
+                                           </div>
+
+                                           <div class="row">
+                                               <div class="form-group col-md-6  ">
+                                                   <input
+                                                   name="firstname"
+                                                   id="firstname"
+                                                   class="form-control"
+                                                   type="text"
+                                                   disabled
+                                                   placeholder="Enter first name">
+                                               </div>
+
+                                               <div class="form-group col-md-6  ">
+                                                   <input
+                                                   name="lastname"
+                                                   id="lastname"
+                                                   class="form-control"
+                                                       value=""
+                                                   type="text"
+                                                   disabled
+                                                   placeholder="Enter last name">
+                                               </div>
+                                           </div>
+                                           <div class="row">
+                                               <div class="form-group col-lg-12  ">
+                                                   <input
+                                                   name="phone"
+                                                   class="form-control"
+                                                   type="text"
+                                                   disabled
+                                                       id="phonenumber"
+                                                   placeholder="Enter phone number">
+                                               </div>
+
+                                               <div class="form-group col-md-12  ">
+                                                   <input
+                                                   name="address"
+                                                   value="Address : "
+                                                   class="form-control"
+                                                   type="text"
+                                                   disabled
+                                                       id="address"
+                                                   placeholder="Enter your address">
+                                               </div>
+
+                                           </div>
+
+                                           <div class="row">
+                                               <div class="form-group col-md-6  ">
+                                                   <input
+                                                   name="nationality"
+                                                   value="Nationality :"
+                                                   class="form-control"
+                                                   type="text"
+                                                   disabled
+                                                       id="nationality"
+                                                   placeholder="Enter your nationality">
+                                               </div>
+
+                                               <div class="form-group col-md-6  ">
+                                                   <input
+                                                   name="nationalid"
+                                                   value="National ID:"
+                                                   disabled
+                                                   class="form-control"
+                                                   type="text"
+                                                       id="nid"
+                                                   placeholder="Enter your national ID">
+                                               </div>
+                                           </div>
+
+                                           <div class="row">
+                                               <div class="form-group col-md-6  ">
+                                                   <input
+                                                   name="comapny"
+                                                   value="Telecom company :"
+                                                   disabled
+                                                   id="company"
+                                                   class="form-control"
+                                                   type="text"
+                                                   placeholder="">
+                                               </div>
+
+
+                                               <div class="form-group col-md-6  ">
+                                                   <input
+                                                   name="sitename"
+                                                   value="Centre station name :"
+                                                   disabled
+                                                   id="sitename"
+                                                   class="form-control"
+                                                   type="text"
+                                                   placeholder="Enter site name">
+                                               </div>
+                                           </div>
+
+
+
+                                   </form>
+
+
+
+                               </div>
+                               <div class="modal-footer">
+
+                                </div>
+
+                       </div>
+                </div>
+               </div>
+
+            </div>
+       </div>
+  </section>
+
 
     <script type="text/javascript"
     src="http://maps.googleapis.com/maps/api/js?key=AIzaSyC_7OucfzhqVC8ic_RPW0jPy-55OE0y-ZA&sensor=false&libraries=places">
