--- a/app/views/main_dashboard.scala.html
+++ b/app/views/main_dashboard.scala.html
@@ -14,10 +14,7 @@
         <meta name="description" content="">
         <meta name="author" content="">
 
-        <link href = "https://code.jquery.com/ui/1.10.4/themes/ui-lightness/jquery-ui.css"
-        rel = "stylesheet">
-        <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/user_head.png")">
-        <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+        <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/signal.png")">
         <link rel="stylesheet" type="text/css" media="screen" href="@routes.Assets.at("stylesheets/vendor/bootstrap/css/bootstrap.min.css")">
         <link rel="stylesheet" type="text/css" media="screen" href="@routes.Assets.at("stylesheets/vendor/font-awesome/css/font-awesome.min.css")">
         <link rel="stylesheet" type="text/css" media="screen" href="@routes.Assets.at("stylesheets/vendor/datatables/dataTables.bootstrap4.css")">
@@ -28,39 +25,38 @@
         <link rel="stylesheet" type="text/css" media="screen" href="@routes.Assets.at("stylesheets/jquery-ui-1.8.12.custom.css")">
         <link rel="stylesheet" type="text/css" media="screen" href="@routes.Assets.at("stylesheets/style.css")">
 
-        <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
     </head>
 
     <body   >
         @content
+@*    <script src="@routes.Assets.at("javascripts/jquery-ui-1.8.12.custom.min.js")"type="text/javascript"></script>*@
+    <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
+    <script src="@routes.Assets.at("javascripts/jquery.validate.min.js")" type="text/javascript"></script>
+@*    <script src="@routes.Assets.at("javascripts/jquery.dataTables.min.js")"type="text/javascript"></script>*@
+    <script src = "https://code.jquery.com/jquery-1.10.2.js"></script>
+    <script src = "https://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
 
-        <script src="@routes.Assets.at("javascripts/sb-admin")" type="text/javascript"></script>
-        <script src="@routes.Assets.at("javascripts/sb-admin.min.js")" type="text/javascript"></script>
-        <script src="@routes.Assets.at("stylesheets/vendor/datatables/jquery.dataTables.min.js")"type="text/javascript"></script>
+
+     <script src="@routes.Assets.at("javascripts/sb-admin.min.js")" type="text/javascript"></script>
+
         <script src="@routes.Assets.at("stylesheets/vendor/bootstrap/js/bootstrap.min.js")"type="text/javascript"></script>
-        <script src="@routes.Assets.at("stylesheets/dataTables.bootstrap4.min.js")"type="text/javascript"></script>
+@*        <script src="@routes.Assets.at("stylesheets/dataTables.bootstrap4.min.js")"type="text/javascript"></script>*@
+@*        <script src="@routes.Assets.at("stylesheets/bootstrap.min.js")" type="text/javascript"></script>*@
+        <script src="@routes.Assets.at("javascripts/bootstrap-datepicker.min.js")"type="text/javascript"></script>
 
 
-        <script src="@routes.Assets.at("stylesheets/bootstrap.min.js")" type="text/javascript"></script>
-        <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
-        <script src="@routes.Assets.at("javascripts/jquery.validate.min.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/validation.js")"type="text/javascript"></script>
-        <script src="@routes.Assets.at("javascripts/jquery.dataTables.min.js")"type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/pagination_tables.js")"type="text/javascript"></script>
 
         <script src="@routes.Assets.at("javascripts/all_agents_style.js")"type="text/javascript"></script>
-        <script src="@routes.Assets.at("javascripts/jquery172.js")"type="text/javascript"></script>
-        <script src="@routes.Assets.at("javascripts/jquery.min.js")"type="text/javascript"></script>
-        <script src="@routes.Assets.at("javascripts/jquery-ui-1.8.12.custom.min.js")"type="text/javascript"></script>
 
         <script src="@routes.Assets.at("javascripts/googlemaps-jscript.js")"type="text/javascript"></script>
 
         <script src="@routes.Assets.at("javascripts/mapscript.js")"type="text/javascript"></script>
 
-        <script src = "https://code.jquery.com/jquery-1.10.2.js"></script>
-        <script src = "https://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
 
-        <script src="@routes.Assets.at("javascripts/bootstrap-datepicker.min.js")"type="text/javascript"></script>
+
+
 
     </body>
 </html>
