--- a/app/views/admincell.scala.html
+++ b/app/views/admincell.scala.html
@@ -11,7 +11,7 @@
                         <div class="col-md-12"><br>
 
                             <h1 class="text-success">REGISTER RWANDA CELL</h1>
-<form class="col-sm-offset-2" action="@routes.AdminDashboard.DashboardCreateCell()" autocomplete="off" id="cellform" id="RegisterAdmin-form" method="POST" >
+<form class="col-sm-offset-2" action="@routes.AdminDashboard.DashboardCreateCell()" autocomplete="off" id="cellform" method="POST" >
 
                             @if(message == "error") {
                                 <div class="alert alert-danger col-md-8 offset-1" role="alert">
