--- a/app/views/navigation.scala.html
+++ b/app/views/navigation.scala.html
@@ -21,8 +21,12 @@
                         <li>
                             <a href="/manage/agents"><i  class="fa  fa-fw fa-caret-down"></i> Handle applications</a>
                         </li>
+
                         <li>
-                            <a href="/manage/accounts "><i  class="fa  fa-fw fa-caret-down"></i>Manage accounts</a>
+                            <a href="/manage/decision"><i  class="fa  fa-fw fa-caret-down"></i> Decision of applications</a>
+                        </li>
+                        <li>
+                            <a href="/admin/modify/account"><i  class="fa  fa-fw fa-caret-down"></i>Manage accounts</a>
                         </li>
                         <li>
                             <a href="/manage/accounts "><i  class="fa  fa-fw fa-caret-down"></i> Admin accounts</a>
