--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -9,7 +9,7 @@
         <meta content="" name="keywords">
         <meta content="" name="description">
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
-        <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
+        <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/signal.png")">
         <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
             <!-- Google Fonts -->
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,500,600,700,700i|Montserrat:300,400,500,600,700" rel="stylesheet">
