--- a/app/views/main_dashboard.scala.html
+++ b/app/views/main_dashboard.scala.html
@@ -29,19 +29,16 @@
 
     <body   >
         @content
-@*    <script src="@routes.Assets.at("javascripts/jquery-ui-1.8.12.custom.min.js")"type="text/javascript"></script>*@
     <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
     <script src="@routes.Assets.at("javascripts/jquery.validate.min.js")" type="text/javascript"></script>
-@*    <script src="@routes.Assets.at("javascripts/jquery.dataTables.min.js")"type="text/javascript"></script>*@
-    <script src = "https://code.jquery.com/jquery-1.10.2.js"></script>
-    <script src = "https://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
+
+    <script src="@routes.Assets.at("javascripts/jquery-1.10.2.js")" type="text/javascript"></script>
+    <script src="@routes.Assets.at("javascripts/jquery-ui.js")" type="text/javascript"></script>
 
 
-     <script src="@routes.Assets.at("javascripts/sb-admin.min.js")" type="text/javascript"></script>
-
+      <script src="@routes.Assets.at("javascripts/sb-admin.min.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("stylesheets/vendor/bootstrap/js/bootstrap.min.js")"type="text/javascript"></script>
-@*        <script src="@routes.Assets.at("stylesheets/dataTables.bootstrap4.min.js")"type="text/javascript"></script>*@
-@*        <script src="@routes.Assets.at("stylesheets/bootstrap.min.js")" type="text/javascript"></script>*@
+
         <script src="@routes.Assets.at("javascripts/bootstrap-datepicker.min.js")"type="text/javascript"></script>
 
 
@@ -53,10 +50,7 @@
         <script src="@routes.Assets.at("javascripts/googlemaps-jscript.js")"type="text/javascript"></script>
 
         <script src="@routes.Assets.at("javascripts/mapscript.js")"type="text/javascript"></script>
-
-
-
-
+        
 
     </body>
 </html>
