--- a/app/views/approvedagent_application.scala.html
+++ b/app/views/approvedagent_application.scala.html
@@ -15,7 +15,8 @@
                                 @if(message=="approval"){
 
 
-                                    <div class="alert alert-success col-md-8 offset-2" role="alert">
+                                    <div class="alert alert-success alert-dismissible  col-md-8 offset-2" role="alert">
+                                            <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
                                         @Html(flash.get("approval"))
                                     </div>
                                     @for(contact <- contacts) {
