--- a/app/views/main_dashboard.scala.html
+++ b/app/views/main_dashboard.scala.html
@@ -29,26 +29,24 @@
 
     <body   >
         @content
-    <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
-    <script src="@routes.Assets.at("javascripts/jquery.validate.min.js")" type="text/javascript"></script>
 
+    @* Js libraries*@
+
+    <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
     <script src="@routes.Assets.at("javascripts/jquery-1.10.2.js")" type="text/javascript"></script>
     <script src="@routes.Assets.at("javascripts/jquery-ui.js")" type="text/javascript"></script>
 
 
       <script src="@routes.Assets.at("javascripts/sb-admin.min.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("stylesheets/vendor/bootstrap/js/bootstrap.min.js")"type="text/javascript"></script>
-
         <script src="@routes.Assets.at("javascripts/bootstrap-datepicker.min.js")"type="text/javascript"></script>
 
+      <script src="@routes.Assets.at("javascripts/jquery.validate.min.js")" type="text/javascript"></script>
+       <script src="@routes.Assets.at("javascripts/validation.js")"type="text/javascript"></script>
 
-        <script src="@routes.Assets.at("javascripts/validation.js")"type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/pagination_tables.js")"type="text/javascript"></script>
-
         <script src="@routes.Assets.at("javascripts/all_agents_style.js")"type="text/javascript"></script>
-
         <script src="@routes.Assets.at("javascripts/googlemaps-jscript.js")"type="text/javascript"></script>
-
         <script src="@routes.Assets.at("javascripts/mapscript.js")"type="text/javascript"></script>
         
 
